# whycode

./: .gitignore  .ocamlformat  INSTALL  NOTES.md  README.md  Why3.YAML-tmLanguage  Why3.tmLanguage  Why3.tmLanguage.yml  count.mlw  dune  dune-project  makefile  rust-analyzer  whycode.install  whycode.opam  whycode.opam.locked
.github/workflows/: ci.yml  main.yml  release.yml
count/: why3session.xml
doc/: why3.txt
ftdetect/: why3.vim
ide/: .eslintrc.json  .gitignore  .vscodeignore  README.md  Why3.tmLanguage.json  Why3.tmLanguage.yml  package-lock.json  package.json
ide/src/: extension.ts  tree.ts
lib/: controller.ml  controller.mli  dune  notifications.ml  sched.ml  why3_api.ml  why3_api.mli
lua/: README.md  setup-local-whycode  whycode.lua
lua/whycode/: aux.lua  buffers.lua  content.lua  handlers.lua  hi.lua  view.lua
syntax/: whyinfo.vim
test/: dune
why3/: CHANGELOG.md  README.md  package.json
why3/src/: extension.ts  multi_step.ts  tree.ts
