opam-version: "2.0"
depends: [
  "dune" {>= "2.7"}
  "odoc" {with-doc}
  "why3"
  "lsp"
  "linol"
  "linol-lwt"
  "uri"
  "bheap"
  "ppx_deriving_yojson"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
