opam-version: "2.0"
depends: [
  "dune" {>= "3.0"}
  "odoc" {with-doc}
  "why3"
  "lsp" { >= "1.11.0" }
  "linol"
  "linol-lwt"
  "uri"
  "bheap"
  "ppx_deriving_yojson"
  "ocamlgraph"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
