opam-version: "2.0"
name: "whycode"
version: "0.0.2"
maintainer: "Xavier Denis <xldenis@gmail.com>"
authors: "Xavier Denis <xldenis@gmail.com>"
synopsis: "An LSP server for Why3"
description: """
The whycode opam package is the backend component of the whycode extension for VSCode which allows viewing and editing Why3 and Creusot proofs from VSCode.
"""
license: "LGPL-2.1-or-later"
homepage: "https://github.com/xldenis/whycode"
bug-reports: "https://github.com/xldenis/whycode/issues"
depends: [
  "ocaml" { >= "4.14" }
  "dune" {>= "3.0"}
  "odoc" {with-doc}
  "why3" {= "git-6736"}
  "lsp" { >= "1.11.0" }
  "logs" { = "0.7.0"}
  "linol"
  "linol-lwt"
  "uri"
  "bheap"
  "camlzip"
  "ocamlgraph"
  "ppx_deriving_yojson"
  "ocamlgraph"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
pin-depends: [
  [ "why3.git-6736" "git+https://gitlab.inria.fr/why3/why3.git#2e496ee04" ]
  [ "why3-ide.git-6736" "git+https://gitlab.inria.fr/why3/why3.git#2e496ee04" ]
]

